--- a/config.h.in
+++ b/config.h.in
@@ -13,6 +13,9 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
+/* Define if SDL2 is available. */
+#undef HAVE_SDL
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
