--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = test_global
 test_global_SOURCES = test_global.c
 
-AM_LIBS = ${GL_LIBS} ${GLEW_LIBS} -lglh
+AM_CFLAGS = -L$(top_srcdir)/src
+LIBS = -lglh ${SDL2_LIBS} ${GLEW_LIBS} 
